--- a/.github/workflows/WForst-Breeze.yml
+++ b/.github/workflows/WForst-Breeze.yml
@@ -16,5 +16,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        
+      - name: Install dependencies
+        run: pip install beautifulsoup4
+
       - name: Ping
         run: python WForst-Breeze.py
