--- a/.github/workflows/WForst-Breeze.yml
+++ b/.github/workflows/WForst-Breeze.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Install dependencies
         run: | 
             pip install beautifulsoup4
